--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,8 @@ dependencies {
             "io.appium:java-client:$appiumVersion",
             "io.rest-assured:rest-assured:$restAssured",
             "org.junit.jupiter:junit-jupiter:$junitVersion",
-            "org.slf4j:slf4j-simple:$slf4jVersion"
+            "org.slf4j:slf4j-simple:$slf4jVersion",
+            "org.aeonbits.owner:owner:1.0.4"
     )
 }
 
